--- a/index.html
+++ b/index.html
@@ -77,19 +77,18 @@
 </head>
 <body>
 
-<h1>❤️ Happy Birthday Haifa ❤️</h1>
+<h1> Happy Birthday Haifa ❤️</h1>
 <button class="btn" onclick="start()">Tap to Reveal Your Surprise</button>
 
 <div id="messageBox"></div>
 
 <script>
 let messages = [
-    "Haifa, today is a beautiful reminder of how blessed the world is to have you...",
-    "Your kindness, your glow, your smile... they make everything brighter.",
-    "You deserve happiness that never fades and love that never ends.",
-    "May this year be full of magic, joy, and unforgettable moments.",
-    "And may your heart be surrounded with warmth, today and always.",
-    "Happy Birthday, Haifa ❤️"
+    "Haifa...",
+    "Your care, your glow, your smile... they make everything brighter.",
+    "Even if you dont have time for you.Thank you for finding time for me",
+     "Iam always lucky for finding a true friend likes you",
+    "Happy Birthday, Haifecha❤️"
 ];
 
 let index = 0;
